tests/integration/snapshots/test-runner/test_runner_mutate/mutate_reports_dependency_build_failure.stderr.txt
Error: Failed to prepare project for mutation testing: Error: In dependency:

[ROOT]/contracts/dependency[LINE]: error: expected `;`, got `IS`
   3 |     THIS IS A SYNTAX ERROR
     |          ^^

In main:

[ROOT]/contracts/main[LINE]: error: Failed to import: [NOT_FOUND]
   2 | import "../gen/dependency_code.tolk"
     |        ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Build failed with 2 errors
